# BlockScript

./: BlockScript_zh_CN.ts  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: codeblock.cpp  codeblock.h  codeblock.ui
ui/: activelabel.cpp  activelabel.h  activeview.cpp  activeview.h
